--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,8 @@
 Package: UltraSpoofR
 Title: Produces Cover Objects to Mask the Orgin Data
 Version: 0.0.0.9000
-Authors@R: Joseph Osborne joe@osborne.uk.com
+Authors@R: person("Joseph", "Developer", role = c("aut", "cre"),
+                     email = "joe@osborne.uk.com")
 Description: Uses a cover object to make the underlying data less neccessary and less often loaded. By making it possible to build analyses on the spoofed data and the added data dictionary it will assist in privacy-by-design workflows.
 Depends: R (>= 3.5.1)
 License: CCBY-4.0
