--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,6 +9,7 @@ License: CCBY-4.0
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.1.1
-Suggests: testthat
+Suggests: 
+    testthat (>= 2.1.0)
 URL: https://github.com/JDOsborne1/UltraSpoofR
 BugReports: https://github.com/JDOsborne1/UltraSpoofR/issues
