--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,7 +6,10 @@ export(guessDataType)
 export(postForm)
 export(ultraAnticipatorDict)
 export(ultraCSV)
+export(ultraExcelRemote)
 export(ultraMeta)
+export(ultraMetaCalc)
+export(ultraMetaCorrector)
 export(ultraMetaGenerator)
 export(ultraRDS)
 export(ultraRandoColumn)
