Documenting new changes to functions and new functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(guessDataType)
 export(postForm)
 export(ultraAnticipatorDict)
 export(ultraCSV)
+export(ultraCallStagedOutput)
 export(ultraExcelRemote)
 export(ultraMeta)
 export(ultraMetaCalc)
