--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(constCharLength)
 export(dateForm)
 export(guessDataType)
 export(postForm)
+export(ultraAggRandom)
 export(ultraAnticipatorDict)
 export(ultraCSV)
 export(ultraCallStagedOutput)
@@ -12,9 +13,11 @@ export(ultraMeta)
 export(ultraMetaCalc)
 export(ultraMetaCorrector)
 export(ultraMetaGenerator)
+export(ultraNameSpoof)
 export(ultraRDS)
 export(ultraRandoColumn)
 export(ultraRandoDataset)
 export(ultraSpoof)
+export(ultraSpooferNew)
 export(ultraWrapper)
 export(uniqueness)
