--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,12 +8,14 @@ export(ultraAggRandom)
 export(ultraAnticipatorDict)
 export(ultraCSV)
 export(ultraCallStagedOutput)
+export(ultraContinuousCheck)
 export(ultraExcelRemote)
 export(ultraMeta)
 export(ultraMetaCalc)
 export(ultraMetaCorrector)
 export(ultraMetaGenerator)
 export(ultraNameSpoof)
+export(ultraNominalCheck)
 export(ultraRDS)
 export(ultraRandoColumn)
 export(ultraRandoDataset)
