--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,8 @@ export(ultraCSV)
 export(ultraCallStagedOutput)
 export(ultraContinuousCheck)
 export(ultraExcelRemote)
+export(ultraGetMax)
+export(ultraGetMin)
 export(ultraMeta)
 export(ultraMetaCalc)
 export(ultraMetaCorrector)
