Adding extra documentation

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,6 +21,7 @@ export(ultraNominalCheck)
 export(ultraRDS)
 export(ultraRandoColumn)
 export(ultraRandoDataset)
+export(ultraSingleSpoofRun)
 export(ultraSpoof)
 export(ultraSpooferNew)
 export(ultraWrapper)
