--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,6 +9,13 @@ License: CCBY-4.0
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.1.1
+Imports:
+    dplyr,
+    tibble,
+    purrr,
+    readxl,
+    stringr,
+    httr
 Suggests: 
     testthat (>= 2.1.0),
     covr
